--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
     <h1>Odin Recipes</h1>
+    <div class="links">
     <a href="recipes/lasagna.html">Lasagna</a>
     <a href="recipes/Basic-Crepes.html">Basic Crepes</a>
     <a href="recipes/Classic-Waffles.html">Classic Waffles</a>
-    
+    </div>
 </body>
 </html>
